Add css for prototyping section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="socials__link" href="#"
             ><img
               class="socials__icon"
-              src="photos/twitter.png"
+              src="photos/twitter.svg"
               width="40"
               height="40"
               alt="X"
@@ -44,7 +44,7 @@
           <a class="socials__link" href="#"
             ><img
               class="socials__icon"
-              src="photos/facebook.png"
+              src="photos/facebook.svg"
               width="40"
               height="40"
               alt="Facebook"
@@ -52,7 +52,7 @@
           <a class="socials__link" href="#"
             ><img
               class="socials__icon"
-              src="photos/linkedin.png"
+              src="photos/linkedin.svg"
               width="40"
               height="40"
               alt="LinkedIn"
@@ -163,31 +163,33 @@
 
       <section class="prototyping">
         <div class="prototyping__container">
-          <p class="prototyping__label"><b>At your fingertips</b></p>
-
-          <h2 class="prototyping__title">Lightning fast prototyping</h2>
-
-          <p class="prototyping__subtitle">
-            <b>Subscribe to our Newsletter</b>
-          </p>
-          <p class="prototyping__description">
-            Available exclusively on Figmaland
-          </p>
-
           <img
             class="prototyping__image"
-            src="photos/prototype.png"
+            src="photos/prototype.svg"
             alt="prototype"
           />
 
-          <input
-            class="prototyping__input"
-            type="email"
-            placeholder="Your Email"
-          />
-          <button class="button button--primary prototyping__button">
-            Subscribe
-          </button>
+          <div class="prototyping__content">
+            <p class="prototyping__label">At your fingertips</p>
+
+            <h2 class="prototyping__title">Lightning fast prototyping</h2>
+
+            <p class="prototyping__subtitle">Subscribe to our Newsletter</p>
+            <p class="prototyping__description">
+              Available exclusively on Figmaland
+            </p>
+
+            <form class="prototyping__form">
+              <input
+                class="prototyping__input"
+                type="email"
+                placeholder="Your Email"
+              />
+              <button class="button button--primary prototyping__button">
+                Subscribe
+              </button>
+            </form>
+          </div>
         </div>
       </section>
 
@@ -229,43 +231,23 @@
 
             <div class="partners__item">
               <p class="partners__client-name">Client Name</p>
-              <img
-                class="partners__logo"
-                src="photos/uber.png"
-                alt="Uber"
-              />
+              <img class="partners__logo" src="photos/uber.png" alt="Uber" />
             </div>
-             <div class="partners__item">
+            <div class="partners__item">
               <p class="partners__client-name">Client Name</p>
-              <img
-                class="partners__logo"
-                src="photos/dropbox.png"
-                alt="Uber"
-              />
+              <img class="partners__logo" src="photos/dropbox.png" alt="Uber" />
             </div>
-             <div class="partners__item">
+            <div class="partners__item">
               <p class="partners__client-name">Client Name</p>
-              <img
-                class="partners__logo"
-                src="photos/google.png"
-                alt="Uber"
-              />
+              <img class="partners__logo" src="photos/google.png" alt="Uber" />
             </div>
-             <div class="partners__item">
+            <div class="partners__item">
               <p class="partners__client-name">Client Name</p>
-              <img
-                class="partners__logo"
-                src="photos/uber.png"
-                alt="Uber"
-              />
+              <img class="partners__logo" src="photos/uber.png" alt="Uber" />
             </div>
-             <div class="partners__item">
+            <div class="partners__item">
               <p class="partners__client-name">Client Name</p>
-              <img
-                class="partners__logo"
-                src="photos/amazon.png"
-                alt="Uber"
-              />
+              <img class="partners__logo" src="photos/amazon.png" alt="Uber" />
             </div>
           </div>
 
@@ -279,11 +261,7 @@
         <div class="testimonials__container">
           <h2 class="testimonials__title">Testimonials</h2>
 
-          <img
-            class="testimonials__logo"
-            src="photos/ibm.svg"
-            alt="IBM Logo"
-          />
+          <img class="testimonials__logo" src="photos/ibm.svg" alt="IBM Logo" />
 
           <p class="testimonials__text">
             Most calendars are designed for teams. Slate is designed for
@@ -291,7 +269,11 @@
           </p>
 
           <div class="testimonials__author">
-            <img class="testimonials__avatar" src="photos/avatar.png" alt="Avatar" />
+            <img
+              class="testimonials__avatar"
+              src="photos/avatar.png"
+              alt="Avatar"
+            />
             <div class="testimonials__author-info">
               <p class="testimonials__name">Organize across</p>
               <p class="testimonials__role">Ui designer</p>
@@ -334,7 +316,7 @@
 
             <div class="pricing__card price-card price-card--blue">
               <h3 class="price-card__title">STANDARD</h3>
-               <p class="price-card__promo">Organize across all apps by hand</p>
+              <p class="price-card__promo">Organize across all apps by hand</p>
               <div class="price-card__price-wrapper">
                 <p class="price-card__amount"><b>10</b></p>
                 <p class="price-card__period"><b>$</b><br />Per Month</p>
@@ -353,7 +335,7 @@
 
             <div class="pricing__card price-card">
               <h3 class="price-card__title">BUSINESS</h3>
-               <p class="price-card__promo">Organize across all apps by hand</p>
+              <p class="price-card__promo">Organize across all apps by hand</p>
               <div class="price-card__price-wrapper">
                 <p class="price-card__amount"><b>99</b></p>
                 <p class="price-card__period"><b>$</b><br />Per Month</p>
