Add css for organize section

--- a/index.html
+++ b/index.html
@@ -147,15 +147,17 @@
 
       <section class="organize">
         <div class="organize__container">
-          <h2 class="organize__title">Fastest way to organize</h2>
-          <p class="organize__subtitle">
-            Most calendars are designed for teams. Slate is designed for
-            freelancers
-          </p>
+          <div class="organize__content">
+            <h2 class="organize__title">Fastest way to organize</h2>
+            <p class="organize__subtitle">
+              Most calendars are designed for teams. Slate is designed for
+              freelancers
+            </p>
 
-          <button class="button button--primary organize__button">
-            Try For Free
-          </button>
+            <button class="button button--primary organize__button">
+              Try For Free
+            </button>
+          </div>
 
           <img class="organize__image" src="photos/laptop.png" alt="laptop" />
         </div>
