Add css for features

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           </ul>
         </nav>
 
+        <img src="photos/figmaland.svg" alt="FigmaLand logo" />
+
         <div class="header__socials socials">
           <a class="socials__link" href="#"
             ><img
@@ -71,14 +73,6 @@
           <button class="button button--primary hero__button">
             Try For Free
           </button>
-
-          <div class="hero__image-wrapper">
-            <img
-              class="hero__image"
-              src="photos/hero-laptop.png"
-              alt="Laptop"
-            />
-          </div>
         </div>
       </section>
     </header>
@@ -91,16 +85,13 @@
             Most calendars are designed for teams. Slate is designed for
             freelancers
           </p>
+          <div class="features__video-wrapper">
+            <img class="features__video" src="photos/videomobile.svg" alt="video" />
+          </div>
 
           <div class="features__grid">
-            <div class="features__item feature">
-              <img
-                class="feature__icon"
-                src="photos/icon1.png"
-                width="40"
-                height="40"
-                alt="icon 1"
-              />
+            <div class="features__item feature1">
+              <img class="feature__icon" src="photos/icon1.svg" alt="icon 1" />
               <h4 class="feature__title">
                 <b>OpenType features<br />Variable fonts</b>
               </h4>
@@ -110,14 +101,8 @@
               </p>
             </div>
 
-            <div class="features__item feature">
-              <img
-                class="feature__icon"
-                src="photos/icon2.png"
-                width="40"
-                height="40"
-                alt="icon 2"
-              />
+            <div class="features__item feature2">
+              <img class="feature__icon" src="photos/icon3.svg" alt="icon 3" />
               <h4 class="feature__title"><b>Design with real data</b></h4>
               <p class="feature__text">
                 Slate helps you see how many more days you need to work to reach
@@ -125,14 +110,8 @@
               </p>
             </div>
 
-            <div class="features__item feature">
-              <img
-                class="feature__icon"
-                src="photos/icon3.png"
-                width="40"
-                height="40"
-                alt="icon 3"
-              />
+            <div class="features__item feature3">
+              <img class="feature__icon" src="photos/icon2.svg" alt="icon 2" />
               <h4 class="feature__title"><b>Fastest way to take action</b></h4>
               <p class="feature__text">
                 Slate helps you see how many more days you need to work to reach
@@ -140,8 +119,6 @@
               </p>
             </div>
           </div>
-
-          <img class="features__video" src="photos/video.png" alt="video" />
         </div>
       </section>
 
