--- a/index.html
+++ b/index.html
@@ -5,58 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Individual Project</title>
     <link rel="shortcut icon" href="photos/logo.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <header class="header">
       <div class="header__container">
-        <div class="header__logo">FigmaLand</div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+          <div class="container-fluid p-0">
 
-        <nav class="header__nav navigation">
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Home</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Product</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Pricing</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">About</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="#">Contact</a>
-            </li>
-          </ul>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav gap-3">
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Product</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
 
-        <img src="photos/figmaland.svg" alt="FigmaLand logo" />
+        <img
+          class="header__logo"
+          src="photos/figmaland.svg"
+          alt="FigmaLand logo"
+        />
 
         <div class="header__socials socials">
           <a class="socials__link" href="#"
-            ><img
-              class="socials__icon"
-              src="photos/twitter.svg"
-              width="40"
-              height="40"
-              alt="X"
+            ><img class="socials__icon" src="photos/twitter.svg" alt="X"
           /></a>
           <a class="socials__link" href="#"
             ><img
               class="socials__icon"
               src="photos/facebook.svg"
-              width="40"
-              height="40"
               alt="Facebook"
           /></a>
           <a class="socials__link" href="#"
             ><img
               class="socials__icon"
               src="photos/linkedin.svg"
-              width="40"
-              height="40"
               alt="LinkedIn"
           /></a>
         </div>
@@ -86,7 +103,11 @@
             freelancers
           </p>
           <div class="features__video-wrapper">
-            <img class="features__video" src="photos/videomobile.svg" alt="video" />
+            <img
+              class="features__video"
+              src="photos/videomobile.svg"
+              alt="video"
+            />
           </div>
 
           <div class="features__grid">
@@ -513,5 +534,6 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
