--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
             />
           </div>
 
+          <div class="clock-container" aria-label="Live clock">
+            <span class="expert-clock__label">Local time</span>
+            <time class="expert-clock__time" id="expertClock">00:00:00</time>
+        </div>
+
           <div class="features__grid">
             <div class="features__item feature1">
               <img class="feature__icon" src="photos/icon1.svg" alt="icon 1" />
@@ -201,14 +206,7 @@
           </p>
 
           <div class="partners__logos">
-            <div class="partners__item">
-              <p class="partners__client-name">Client Name</p>
-              <img
-                class="partners__logo"
-                src="photos/google.png"
-                alt="Google"
-              />
-            </div>
+            
 
             <div class="partners__item">
               <p class="partners__client-name">Client Name</p>
@@ -534,5 +532,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
