--- a/index.html
+++ b/index.html
@@ -291,8 +291,14 @@
             freelancers
           </p>
 
+          <select class="product__currency">
+            <option value="USD" selected>USD</option>
+            <option value="EUR">EUR</option>
+            <option value="UAH">UAH</option>
+          </select>
+
           <div class="pricing__cards">
-            <div class="pricing__card price-card">
+            <div class="pricing__card price-card" data-price="0">
               <h3 class="price-card__title">FREE</h3>
               <p class="price-card__promo">Organize across all apps by hand</p>
               <div class="price-card__price-wrapper">
@@ -311,7 +317,7 @@
               </button>
             </div>
 
-            <div class="pricing__card price-card price-card--blue">
+            <div class="pricing__card price-card price-card--blue" data-price="10">
               <h3 class="price-card__title">STANDARD</h3>
               <p class="price-card__promo">Organize across all apps by hand</p>
               <div class="price-card__price-wrapper">
@@ -330,7 +336,7 @@
               </button>
             </div>
 
-            <div class="pricing__card price-card">
+            <div class="pricing__card price-card" data-price="99">
               <h3 class="price-card__title">BUSINESS</h3>
               <p class="price-card__promo">Organize across all apps by hand</p>
               <div class="price-card__price-wrapper">
@@ -533,5 +539,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/index.js"></script>
+    <script src="js/index.currency.js"></script>
   </body>
 </html>
